--- a/styles/style.css
+++ b/styles/style.css
@@ -1,45 +1,86 @@
 body {
   font-family: 'PT Sans', sans-serif;
-background-image: url(../img/dc-online-media-mockup.jpg);
+  background-image: url(../img/dc-online-media-mockup.jpg);
   background-size: 800px 20624px;
   background-position: top center;
   background-repeat: no-repeat;
   width: 700px;
   margin: 0 auto;
-  margin-top:50px;
-  margin-bottom: 50px;
-  line-height: 66px
+  padding-top: 66px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+h1, h2, h3 {
+  font-family: 'PT Sans Caption', sans-serif;
+  font-weight: bold;
+}
 
-a{
+h1 {
+  font-family: 'PT Sans Caption';
+  font-size: 40px;
+  line-height: 46px;
+  font-weight: bold;
+}
+
+h1 + p {
+  color: rgba(0, 0, 0, .4);
+  font-family: 'PT Sans Caption', sans-serif;
+  font-size: 22px;
+  line-height: 32px;
+}
+
+h2 {
+  margin-top: 43px;
+  font-size: 32px;
+  line-height: 36px;
+}
+
+h2 + p{
+  margin-top: 7px;
+}
+
+h3 {
+  margin-top: 36px;
+  font-size: 28px;
+  line-height: 34px;
+}
+
+h3 + p {
+  margin-top: 6px
+}
+
+p, blockquote {
+  font-size: 22px;
+  line-height: 34px;
+}
+
+p + p, blockquote + p {
+  margin-top: 29px
+}
+
+a {
   color: rgb(0, 0, 0)
 }
-h1 {
-  font-weight: bold;
-}
-h2 {
-  font-weight: bold;
-}
-p {
+
+ul,ol {
   font-size: 20px;
   line-height: 25px;
 }
-ul,ol{
-  font-size: 20px;
-  line-height: 25px;
-}
-h1 {
-  color: rgb(0, 0, 0);
-  font-size: 30px;
-  line-height: 1.4em;
-  text-decoration: uppercace;
-}
-title {
-  font-size: 45px
-}
-blockquote{
+
+blockquote {
+  position: relative;
+  margin-top: 29px;
   font-style: italic;
-  font-size: 20px;
-  line-height: 25px;
+}
+
+blockquote::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -20px;
+  width: 3px;
+  height: 100%;
+  background-color: rgba(0,0,0,.8);
 }
