--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,27 @@
 body {
   font-family: 'PT Sans', sans-serif;
-  background-image: url(../img/dc-online-media-mockup.jpg);
+  /*background-image: url(../img/dc-online-media-mockup.jpg);*/
   background-size: 800px 20624px;
   background-position: top center;
   background-repeat: no-repeat;
-  width: 700px;
-  margin: 0 auto;
   padding-top: 66px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, p, ul, blockquote {
+  width: 700px;
+  margin: 0 auto;
+}
+
+img {
+  display: block;
+  width: 1020px;
+  margin: 80px auto;
+}
+
+a {
+  color: inherit;
 }
 
 h1, h2, h3 {
@@ -50,7 +63,7 @@ h3 + p {
   margin-top: 6px
 }
 
-p, blockquote {
+p, blockquote, ul {
   font-size: 22px;
   line-height: 34px;
 }
@@ -66,6 +79,15 @@ a {
 ul,ol {
   font-size: 20px;
   line-height: 25px;
+}
+
+ul {
+  margin: 29px auto;
+  list-style-type: disc;
+}
+
+li {
+  margin: 17px 0 17px 30px;
 }
 
 blockquote {
