добавила layout.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,108 +1,4 @@
-body {
-  font-family: 'PT Sans', sans-serif;
-  /*background-image: url(../img/dc-online-media-mockup.jpg);*/
-  background-size: 800px 20624px;
-  background-position: top center;
-  background-repeat: no-repeat;
-  padding-top: 66px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h1, h2, h3, p, ul, blockquote {
-  width: 700px;
-  margin: 0 auto;
-}
-
-img {
-  display: block;
-  width: 1020px;
-  margin: 80px auto;
-}
-
-a {
-  color: inherit;
-}
-
-h1, h2, h3 {
-  font-family: 'PT Sans Caption', sans-serif;
-  font-weight: bold;
-}
-
-h1 {
-  font-family: 'PT Sans Caption';
-  font-size: 40px;
-  line-height: 46px;
-  font-weight: bold;
-}
-
-h1 + p {
-  color: rgba(0, 0, 0, .4);
-  font-family: 'PT Sans Caption', sans-serif;
-  font-size: 22px;
-  line-height: 32px;
-}
-
-h2 {
-  margin-top: 43px;
-  font-size: 32px;
-  line-height: 36px;
-}
-
-h2 + p{
-  margin-top: 7px;
-}
-
-h3 {
-  margin-top: 36px;
-  font-size: 28px;
-  line-height: 34px;
-}
-
-h3 + p {
-  margin-top: 6px
-}
-
-p, blockquote, ul {
-  font-size: 22px;
-  line-height: 34px;
-}
-
-p + p, blockquote + p {
-  margin-top: 29px
-}
-
-a {
-  color: rgb(0, 0, 0)
-}
-
-ul,ol {
-  font-size: 20px;
-  line-height: 25px;
-}
-
-ul {
-  margin: 29px auto;
-  list-style-type: disc;
-}
-
-li {
-  margin: 17px 0 17px 30px;
-}
-
-blockquote {
-  position: relative;
-  margin-top: 29px;
-  font-style: italic;
-}
-
-blockquote::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: -20px;
-  width: 3px;
-  height: 100%;
-  background-color: rgba(0,0,0,.8);
-}
+@import "reset.css";
+@import "https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700&amp;subset=cyrillic";
+@import "https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,400i,700&amp;subset=cyrillic";
+@import "layout.css";
