--- a/styles/layout.css
+++ b/styles/layout.css
@@ -9,19 +9,73 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2, h3, p, ul, blockquote {
+ .sidebar {
+   position: fixed;
+   top: 46px;
+   left: 20px;
+   width: 300px;
+   opacity: .1;
+   transition: opasity .2s ease;
+ }
+
+.sidebar:hover{
+  opacity: 1;
+}
+
+.sidebar > ul > li:first-child {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.sidebar > ul > li:hover {
+  color: (0, 0, 0, 1);
+}
+
+ .sidebar li {
+   margin: 12px 0;
+   font-size: 14px;
+   line-height: 15px;
+   color: rgba(0, 0, 0, .8);
+   list-style-type: none;
+ }
+
+.sidebar > ul {
+  padding: 15px 30px;
+}
+
+.sidebar > ul > li > ul {
+  padding-left: 10px;
+}
+
+.sidebar > ul > li > ul li {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.sidebar > ul > li > ul li:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+article > ul {
   width: 700px;
   margin: 0 auto;
 }
 
-img {
+article {
+  width: 700px;
+  margin: 0 auto;
+  color: inherit;
+}
+
+article img {
   display: block;
   width: 1020px;
   margin: 80px auto;
+  margin-left: -160px;
 }
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 h1, h2, h3 {
@@ -72,9 +126,7 @@ p + p, blockquote + p {
   margin-top: 29px
 }
 
-a {
-  color: rgb(0, 0, 0)
-}
+
 
 ul,ol {
   font-size: 20px;
