--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,12 +1,49 @@
 body {
   font-family: 'PT Sans', sans-serif;
   /*background-image: url(../img/dc-online-media-mockup.jpg);*/
-  background-size: 800px 20624px;
+  /*background-size: 800px 20624px;
   background-position: top center;
-  background-repeat: no-repeat;
-  padding-top: 66px;
+  background-repeat: no-repeat;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.Menubar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 50px;
+  padding: 20px;
+}
+
+.logo {
+  display: block;
+  width: 180px;
+  height: 16px;
+  background-image: url(../img/wikimedium_logo.svg);
+  background-size: cover;
+}
+
+.about {
+  font-size: 14px;
+  line-height: 50px;
+  color: rgba(0,0,0,.2)
+  -webkit-transition: color .1s ease;
+  transition: color .1s ease;
+}
+
+.about:hover {
+  color: rgba(0,0,0,.4);
 }
 
  .sidebar {
