--- a/styles/layout.css
+++ b/styles/layout.css
@@ -158,3 +158,9 @@ blockquote::before {
   height: 100%;
   background-color: rgba(0,0,0,.8);
 }
+
+@media screen and (max-width: 1340px) {
+  .sidebar {
+    display: none;
+  }
+}
