--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,3 +1,6 @@
+@import "https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700&amp;subset=cyrillic";
+@import "https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,400i,700&amp;subset=cyrillic";
+
 body {
   font-family: 'PT Sans', sans-serif;
   /*background-image: url(../img/dc-online-media-mockup.jpg);*/
@@ -6,6 +9,7 @@ body {
   background-repeat: no-repeat;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-width: 320px;
 }
 
 * {
@@ -196,8 +200,8 @@ blockquote::before {
   background-color: rgba(0,0,0,.8);
 }
 
-@media screen and (max-width: 1340px) {
+/*@media screen and (max-width: 1340px) {
   .sidebar {
     display: none;
   }
-}
+}*/
