--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
 @import "reset.css";
-@import "https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700&amp;subset=cyrillic";
-@import "https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,400i,700&amp;subset=cyrillic";
 @import "layout.css";
+@import "responsive.css";
