--- a/styles/layout.css
+++ b/styles/layout.css
@@ -16,6 +16,11 @@ body {
   box-sizing: border-box;
 }
 
+iframe{
+  width: 100%;
+  margin-top: 43px;
+  height: 394px;
+}
 .Menubar {
   display: -webkit-box;
   display: -ms-flexbox;
